# tbcompare

./: .gitignore  Cargo.toml  README.md  USER_GUIDE.md
src/: comparison.rs  file_utils.rs  lib.rs  main.rs
